syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gitbub.liaojiacan.watcher";
option java_outer_classname = "WatcherProto";
option objc_class_prefix = "HLW";

package watcher;

// The greeting service definition.
service Watcher {
  // Sends a greeting
  rpc SayHello (RegisterRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message RegisterRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}